--- a/build.gradle
+++ b/build.gradle
@@ -34,14 +34,16 @@ subprojects {
     }
 
     repositories {
-        mavenLocal()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public"}
         mavenCentral()
-        maven { url "http://nexus.aist.io/nexus/repository/maven-public/" }
-        maven { url "http://central.maven.org/maven2/" }
-        maven { url "http://repo.spring.io/release" }
-        maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/snapshot" }
-        maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/" }
+        mavenLocal()
+
+//        maven { url "http://nexus.aist.io/nexus/repository/maven-public/" }
+//        maven { url "http://central.maven.org/maven2/" }
+//        maven { url "http://repo.spring.io/release" }
+//        maven { url "http://repo.spring.io/milestone" }
+//        maven { url "http://repo.spring.io/snapshot" }
+//        maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/" }
     }
 
     dependencies {
