--- a/spring-msg-portal/build.gradle
+++ b/spring-msg-portal/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
     testCompile group: 'junit', name: 'junit', version: '4.12'
