--- a/spring-msg-service/src/main/resources/config/application-kafka.yml
+++ b/spring-msg-service/src/main/resources/config/application-kafka.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${AA_PORT:8080}
+  port: ${AA_PORT:8082}
   servlet:
     context-path: /
 
@@ -13,3 +13,11 @@ spring:
       compressionType:  ${AA_KAFKA_COMPRESS_TYPE:none}
       key-serializer: ${AA_KAFKA_KEY_SERIALIZER:org.apache.kafka.common.serialization.StringSerializer}
       value-serializer: ${AA_KAFKA_VALUE_SERIALIZER:org.apache.kafka.common.serialization.StringSerializer}
+    consumer:
+      auto-offset-reset: ${AA_KAFKA_AUTO_OFFSET_RESET:latest}
+      enable-auto-commit: ${AA_KAFKA_ENABLE_AUTO_COMMIT:false}
+      auto-commit-interval: ${AA_KAFKA_AUTO_COMMIT:100}
+      key-serializer: ${AA_KAFKA_KEY_SERIALIZER:org.apache.kafka.common.serialization.StringSerializer}
+      value-serializer: ${AA_KAFKA_VALUE_SERIALIZER:org.apache.kafka.common.serialization.StringSerializer}
+      group-id: ${AA_KAFKA_GROUP_ID:paranora-group}
+      client-id: ${AA_KAFKA_CLIENT_ID:paranora}
