--- a/spring-msg-service/src/main/resources/config/application.yml
+++ b/spring-msg-service/src/main/resources/config/application.yml
@@ -24,5 +24,5 @@ spring:
 
 
 rongyun:
-  appKey: ${AA_RONGYUN_APPKEY:y745wfm8yoxyv}
-  appSecret: ${AA_RONGYUN_APPSECRET:y9OPwukUF8DMaa}
+  appKey: ${AA_RONGYUN_APPKEY:yrttwfmgyoxyv}
+  appSecret: ${AA_RONGYUN_APPSECRET:yyuPwuksdfhaa}
