--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ version=1.0.1-SNAPSHOT
 buildDir=out
 casGroup=org.apereo.cas
 casServerVersion=5.3.9
-casClientVersion=3.6.1
+casClientVersion=3.6.2
 casSecurityFilterVersion=2.0.10.4
 projectUrl=http://www.apereo.org/cas
 projectInceptionYear=2004
@@ -43,9 +43,9 @@ findbugsVersion=3.0.1
 findbugsContribVersion=7.4.3
 findbugsSecVersion=1.8.0
 checkstyleVersion=8.10
-javaxServletVersion=3.1.0
+javaxServletVersion=4.0.1
 javaxElVersion=3.0.0
-javaxElImplVersion=2.2.6
+javaxElImplVersion=2.2.6httpclient
 javaxValidationVersion=1.1.0.Final
 javassistVersion=3.22.0-GA
 javaxJstlVersion=1.2
@@ -53,27 +53,27 @@ semverVersion=2.2.0
 oshiVersion=3.5.0
 swaggerVersion=1.5.18
 swaggerSpringFoxVersion=2.9.0
-slf4jVersion=1.7.25
+slf4jVersion=1.7.30
 disruptorVersion=3.4.2
 inspektrVersion=1.8.4.GA
 sentryRavenVersion=8.0.3
-springIntegrationVersion=4.3.16.RELEASE
+springIntegrationVersion=5.4.3
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.5.0.RELEASE
 springDataCommonsVersion=1.13.15.RELEASE
 springDataMongoDbVersion=1.10.15.RELEASE
-springSecurityVersion=4.2.8.RELEASE
+springSecurityVersion=5.4.2
 springShellVersion=1.2.0.RELEASE
-springCloudConfigVersion=1.4.0.RELEASE
-springCloudContextVersion=1.3.0.RELEASE
-springCloudCommonsVersion=1.3.0.RELEASE
-springCloudBusVersion=1.3.2.RELEASE
-springCloudVaultVersion=1.1.0.RELEASE
-springCloudZookeeperVersion=1.2.0.RELEASE
-springCloudSleuthVersion=1.3.0.RELEASE
-springCloudEurekaVersion=1.4.0.RELEASE
-springCloudConsulVersion=1.3.0.RELEASE
-kafkaSpringVersion=2.1.0.RELEASE
+springCloudConfigVersion=3.0.1
+springCloudContextVersion=3.0.1
+springCloudCommonsVersion=3.0.1
+springCloudBusVersion=3.0.1
+springCloudVaultVersion=3.0.1
+springCloudZookeeperVersion=3.0.1
+springCloudSleuthVersion=3.0.1
+springCloudEurekaVersion=3.0.1
+springCloudConsulVersion=3.0.1
+kafkaSpringVersion=2.6.6
 zookeeperVersion=3.4.10
 curatorVersion=2.12.0
 eurekaClientVersion=1.9.0
@@ -93,7 +93,7 @@ apacheFedizVersion=1.4.3
 apacheFortressVersion=2.0.0
 apacheVelocityVersion=2.0
 apacheSyncopeVersion=2.0.8
-springBootVersion=1.5.18.RELEASE
+springBootVersion=2.4.3
 springBootAdminVersion=1.5.7
 hibernateValidatorVersion=5.4.1.Final
 dom4jVersion=1.6.1
@@ -103,26 +103,28 @@ mongoDriverVersion=3.8.2
 jtaVersion=1.1
 splunkLoggingVersion=1.5.3
 snakeYamlVersion=1.23
-commonsLangVersion=3.7
+commonsLang3Version=3.8.1
+commonsLangVersion=3.8.1
 commonsLoggingVersion=1.2
 commonsValidatorVersion=1.6
 commonsJexlVersion=1.1
 commonsCodecVersion=1.11
 commonsIoVersion=2.6
-commonsTextVersion=1.3
+commonsTextVersion=1.6
 commonsCliVersion=1.4
 commonsPoolVersion=2.5.0
 commonsBeansVersion=1.9.3
 commonsConfigVersion=2.2
 commonsCollections3Version=3.2.2
+commonsCollections4Version=4.3
 commonsCollectionsVersion=4.1
 joolVersion=0.9.12
 jasyptVersion=1.9.2
 jodaTimeVersion=2.9.9
 reflectionsVersion=0.9.11
-guavaVersion=25.0-jre
-pac4jSpringWebmvcVersion=3.2.0
-pac4jVersion=3.8.3
+guavaVersion=30.1-jre
+pac4jSpringWebmvcVersion=4.0.1
+pac4jVersion=4.3.0
 dropwizardMetricsSpringVersion=3.1.3
 statsdVersion=3.1.0
 amazonSdkVersion=1.11.332
@@ -153,23 +155,23 @@ unboundidScim2Version=2.1.3
 unboundidScim1Version=1.8.19
 jerseyVersion=2.27
 jradiusVersion=jradius-1.1.5
-axetWgetVersion=1.4.9
-httpclientVersion=4.5.6
+axetWgetVersion=1.7.0
+httpclientVersion=4.5.13
 memcachedEmbeddedVersion=1.06.4
 spymemcachedVersion=2.12.3
 awsmemcachedVersion=1.1.1
 kryoVersion=4.0.2
 kryoSerializersVersion=0.42
-ehcacheVersion=2.10.5
+ehcacheVersion=2.10.6
 jcacheVersion=1.0.1
 twilioVersion=7.20.0
 textMagicVersion=1.2.0
-shiroVersion=1.4.2
+shiroVersion=1.7.0
 jose4jVersion=0.6.3
 nimbusJoseVersion=5.10
 nimbusOidcVersion=5.62
 jsonSmartVersion=2.3
-opensamlVersion=3.4.0
+opensamlVersion=3.4.5
 idpVersion=3.4.0
 idpLibertyIdwsConsumerVersion=1.0.0
 xmlapisVersion=1.4.01
@@ -215,18 +217,18 @@ editableTableVersion=4932ac1
 groovyVersion=2.4.15
 hibernateVersion=5.2.17.Final
 hikariVersion=3.2.0
-httpCoreVersion=4.4.9
+httpCoreVersion=4.4.14
 infinispanVersion=9.4.9.Final
 thymeleafDialectVersion=2.3.0
 thymeleafVersion=3.0.9.RELEASE
-jacksonDatabindVersion=2.9.5
+jacksonDatabindVersion=2.12.1
 couchbaseVersion=2.5.5
 hsqlVersion=2.4.0
-springVersion=4.3.20.RELEASE
-log4jVersion=2.11.0
+springVersion=5.3.4
+log4jVersion=2.14.0
 dropwizardMetricsVersion=3.2.5
 springBootTomcatVersion=8.5.37
-springSessionVersion=1.3.1.RELEASE
+springSessionVersion=1.3.5.RELEASE
 hazelcastVersion=3.10.6
 caffeinVersion=2.6.2
 mysqlVersion=8.0.11
@@ -234,9 +236,12 @@ postgresqlVersion=42.2.5
 mariaDbVersion=2.2.4
 jtdsVersion=1.3.1
 mssqlServerVersion=6.4.0.jre8
-redissonVersion=3.10.4
-jedisVersion=2.9.0
-lettuceVersion=5.1.5.RELEASE
+redissonVersion=3.14.1
+jedisVersion=3.5.1
+lettuceVersion=5.3.6.RELEASE
+logbackVersion=1.2.3
+fastjsonVersion=1.2.75
+cxfRtFrontendJaxrsVersion=3.4.2
 
 
 
