--- a/spring-msg-service/build.gradle
+++ b/spring-msg-service/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'io.spring.dependency-management'
 
 buildscript {
     ext {
-        springPluginVersion = '1.0.9.RELEASE'
-        springBootVersion = '2.2.6.RELEASE'
+        springDependencyManagementPluginVersion = '1.0.11.RELEASE'
+        springBootGradlePluginVersion = '2.4.3'
     }
     repositories {
         jcenter()
@@ -18,22 +18,22 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "io.spring.gradle:dependency-management-plugin: ${springPluginVersion}"
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "io.spring.gradle:dependency-management-plugin: ${springDependencyManagementPluginVersion}"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootGradlePluginVersion}"
     }
 }
 
 dependencies {
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.2.6.RELEASE'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.6.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: springBootVersion
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
 
-    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.4.5.RELEASE'
+    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: kafkaSpringVersion
 
-    implementation group: 'cn.rongcloud.im', name: 'server-sdk-java', version: '3.1.7'
+    implementation group: 'cn.rongcloud.im', name: 'server-sdk-java', version: rongcloudSdkVersion
 
-    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+    implementation group: 'com.alibaba', name: 'fastjson', version: fastjsonVersion
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonDatabindVersion
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: junitVersion
 }
