--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ subprojects {
     }
 
     dependencies {
-
+        implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     }
 
     publishing {
