--- a/gradle.properties
+++ b/gradle.properties
@@ -242,7 +242,7 @@ lettuceVersion=5.3.6.RELEASE
 logbackVersion=1.2.3
 fastjsonVersion=1.2.75
 cxfRtFrontendJaxrsVersion=3.4.2
-
+rongcloudSdkVersion=3.2.5
 
 
 
