--- a/gradle.properties
+++ b/gradle.properties
@@ -73,7 +73,7 @@ springCloudZookeeperVersion=3.0.1
 springCloudSleuthVersion=3.0.1
 springCloudEurekaVersion=3.0.1
 springCloudConsulVersion=3.0.1
-kafkaSpringVersion=2.6.6
+kafkaSpringVersion=2.7.0
 zookeeperVersion=3.4.10
 curatorVersion=2.12.0
 eurekaClientVersion=1.9.0
@@ -93,7 +93,7 @@ apacheFedizVersion=1.4.3
 apacheFortressVersion=2.0.0
 apacheVelocityVersion=2.0
 apacheSyncopeVersion=2.0.8
-springBootVersion=2.4.3
+springBootVersion=2.4.5
 springBootAdminVersion=1.5.7
 hibernateValidatorVersion=5.4.1.Final
 dom4jVersion=1.6.1
@@ -242,7 +242,8 @@ lettuceVersion=5.3.6.RELEASE
 logbackVersion=1.2.3
 fastjsonVersion=1.2.75
 cxfRtFrontendJaxrsVersion=3.4.2
-rongcloudSdkVersion=3.2.5
+rongcloudSdkVersion=3.2.7
+springDependencyManagementPluginVersion=1.0.11.RELEASE
 
 
 
