--- a/build.gradle
+++ b/build.gradle
@@ -118,8 +118,8 @@ subprojects {
                 def snapshotsRepoUrl = "http://nexus.aist.io/nexus/repository/maven-snapshots/"
                 url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
                 credentials {
-                    username '1'
-                    password '1'
+                    username 'admin'
+                    password 'admin123'
                 }
             }
         }
