--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #################################################
 # Platform metadata for releases, POM generation, etc.
 #################################################
-group=com.paranora
+group=org.paranora
 version=1.0.1-SNAPSHOT
 buildDir=out
 casGroup=org.apereo.cas
