--- a/gradle.properties
+++ b/gradle.properties
@@ -64,16 +64,16 @@ springDataCommonsVersion=1.13.15.RELEASE
 springDataMongoDbVersion=1.10.15.RELEASE
 springSecurityVersion=5.4.2
 springShellVersion=1.2.0.RELEASE
-springCloudConfigVersion=3.0.1
-springCloudContextVersion=3.0.1
-springCloudCommonsVersion=3.0.1
-springCloudBusVersion=3.0.1
-springCloudVaultVersion=3.0.1
+springCloudConfigVersion=3.0.2
+springCloudContextVersion=3.0.2
+springCloudCommonsVersion=3.0.2
+springCloudBusVersion=3.0.2
+springCloudVaultVersion=3.0.2
 springCloudZookeeperVersion=3.0.1
-springCloudSleuthVersion=3.0.1
-springCloudEurekaVersion=3.0.1
-springCloudConsulVersion=3.0.1
-kafkaSpringVersion=2.7.0
+springCloudSleuthVersion=3.0.2
+springCloudEurekaVersion=3.0.2
+springCloudConsulVersion=3.0.2
+kafkaSpringVersion=2.7.1
 zookeeperVersion=3.4.10
 curatorVersion=2.12.0
 eurekaClientVersion=1.9.0
@@ -242,8 +242,9 @@ lettuceVersion=5.3.6.RELEASE
 logbackVersion=1.2.3
 fastjsonVersion=1.2.76
 cxfRtFrontendJaxrsVersion=3.4.2
-rongcloudSdkVersion=3.2.7
+rongcloudSdkVersion=3.2.9
 springDependencyManagementPluginVersion=1.0.11.RELEASE
+conuslVersion=3.0.2
 
 
 
